# USBD

./: README.md  USB_Device.cbuild-idx.yml  USB_Device.cbuild-pack.yml  USB_Device.cbuild-set.yml  USB_Device.csolution.yml  vcpkg-configuration.json
HID/: .clangd  HID.Debug+B-U5.cbuild.yml  HID.Debug+B-U5.cprj  HID.Debug+B-U585I-IOT02A.cbuild.yml  HID.Debug+B-U585I-IOT02A.cprj  HID.Release+B-U5.cbuild.yml  HID.Release+B-U5.cprj  HID.Release+B-U585I-IOT02A.cbuild.yml  HID.Release+B-U585I-IOT02A.cprj  HID.cproject.yml  USBD_User_HID_0.c
HID/RTE/USB/: USBD_Config_0.h  USB_Debug.h
HID/RTE/_Debug_B-U585I-IOT02A/: RTE_Components.h
MassStorage/: .clangd  MassStorage.Debug+B-U5.cbuild.yml  MassStorage.Debug+B-U5.cprj  MassStorage.Debug+B-U585I-IOT02A.cbuild.yml  MassStorage.Debug+B-U585I-IOT02A.cprj  MassStorage.Release+B-U5.cbuild.yml  MassStorage.Release+B-U5.cprj  MassStorage.Release+B-U585I-IOT02A.cbuild.yml  MassStorage.Release+B-U585I-IOT02A.cprj  MassStorage.cproject.yml
MassStorage/RTE/USB/: USBD_Config_0.h  USBD_Config_0.h.base@1.0.0  USB_Debug.h  USB_Debug.h.base@1.0.0
MassStorage/RTE/_Debug_B-U585I-IOT02A/: RTE_Components.h
RTE/_Debug_B-U585I-IOT02A/: RTE_Components.h
RTE/_Debug_LPC55S69-EVK/: RTE_Components.h
VirtualCOM/: .clangd  VirtualCOM.Debug+B-U5.cbuild.yml  VirtualCOM.Debug+B-U5.cprj  VirtualCOM.Debug+B-U585I-IOT02A.cbuild.yml  VirtualCOM.Debug+B-U585I-IOT02A.cprj  VirtualCOM.Release+B-U5.cbuild.yml  VirtualCOM.Release+B-U5.cprj  VirtualCOM.Release+B-U585I-IOT02A.cbuild.yml  VirtualCOM.Release+B-U585I-IOT02A.cprj  VirtualCOM.cproject.yml
VirtualCOM/RTE/Device/STM32U585AIIx/: regions_B_U585I_IOT02A.h
VirtualCOM/RTE/USB/: USBD_Config_0.h  USB_Debug.h
VirtualCOM/RTE/_Debug_B-U585I-IOT02A/: RTE_Components.h
tmp/HID/B-U585I-IOT02A/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  ac6_linker_script.sct  build.ninja  cmake_install.cmake  compile_commands.json
